Wed Dec  3 17:56:54 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug with Apple gcc (clang) on x86_64

Fri Aug 22 15:10:18 CEST 2014 <Daniel.Diaz@univ-paris1.fr>

	* allow to define more atoms with MAX_ATOM env var on 64 bits machines

Wed Aug 13 11:25:18 CEST 2014 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in bagof/3 when used as findall/3

Fri Jul 11 17:27:36 CEST 2014 <Daniel.Diaz@univ-paris1.fr>

	* port to sparc64/OpenBSD
	  (machine kindly provided by Duncan Patton a Campbell)

Tue May  6 10:43:33 CEST 2014 <Daniel.Diaz@univ-paris1.fr>

	* add built-in predicate findall/4

Thu Mar  6 16:19:36 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug with linedit when environment varirable LINEDIT=no

Wed Feb  5 15:16:37 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* fix bugs in the FD solver

Fri Nov 22 19:47:45 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* set socket option SO_REUSEADDR at socket creation

Thu Nov 21 16:29:57 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* support for alternate Prolog file extension .prolog

Mon Nov 18 18:32:44 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in atoms for 1-char atom '\0' (now acts as the empty atom)

Tue Nov 12 10:17:10 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* fix problems with Apple gcc = LLVM version 5.0 (clang-500.2.79)
	* remove clang warnings (uninitialized variables)
	* fix bugs in the lexer of the form 0bop 2 when bop is an infix op

Tue Oct  1 09:40:31 CEST 2013 <Daniel.Diaz@univ-paris1.fr>

	* fix terminal ANSI sequence handling in linedit

Wed Sep 18 09:25:06 CEST 2013 <Daniel.Diaz@univ-paris1.fr>

	* increase internal compiler data sizes

Thu Jul  4 13:17:07 CEST 2013 <Daniel.Diaz@univ-paris1.fr>

	* fix bug in gprolog.h (invalid 64 bits PL_MAX_INTEGER)

Fri Apr 12 17:17:50 CEST 2013 <Daniel.Diaz@univ-paris1.fr>

	* add Prolog flags c_cc_version_data
	* fix a regression bug in linedit
	* fix a little bug in the debugger
	* add subtract/3 built-in predicate
