@@ -1,6 +1,6 @@
 Change in GNU Prolog version 1.4.5:
 
-* fix a bug with Apple gcc (clang) on x86_64
+* fix a bug with Apple/Yosemite gcc = LVM version 6.0 (clang-600.0.56) on x86_64
 * allow to define more atoms with MAX_ATOM env var on 64 bits machines
 * fix a bug in bagof/3 when used as findall/3
 * port to sparc64/OpenBSD
@@ -9,7 +9,7 @@ Change in GNU Prolog version 1.4.5:
 * fix a bug with linedit when environment varirable LINEDIT=no
 * fix bugs in the FD solver
 * set socket option SO_REUSEADDR at socket creation
-* fix problems with Apple gcc = LLVM version 5.0 (clang-500.2.79)
+* fix problems with Apple/Mavericks gcc = LLVM version 5.0 (clang-500.2.79) on x86_64
 * remove clang warnings (uninitialized variables)
 * fix bugs in the lexer of the form 0bop 2 when bop is an infix op
 * fix terminal ANSI sequence handling in linedit
